# valorant-

./: .gitignore  README.md  TODO.md  pyproject.toml  requirementes.txt  requirements.txt  requirements_laptop.txt
configs/: desktop.yaml  laptop.yaml
data/processed/round_labels/: M8 vs. EDG - VALORANT Masters Santiago - SWISS_round_labels.csv  M8 vs. EDG - VALORANT Masters Santiago - SWISS_round_labels_checked.csv  M8 vs. EDG - VALORANT Masters Santiago - SWISS_round_labels_fix_log.csv  M8 vs. EDG - VALORANT Masters Santiago - SWISS_round_labels_fixed.csv  M8 vs. EDG - VALORANT Masters Santiago - SWISS_ui_diff.csv  M8 vs. EDG - VALORANT Masters Santiago - SWISS_ui_segments.csv
docs/: refactor_notes.md
notebooks/: get_map.ipynb  get_round_and_time.ipynb  round_labeling_single_vod.ipynb
notebooks/itsu/: 04_baseline.ipynb  04_minimum_model.ipynb
notebooks/ryo/: 02_check_rounds_labels.ipynb  check_round_labels.ipynb  dataset_01_test.ipynb  download_vod.ipynb  get_map.ipynb  get_round_and_time.ipynb  get_start_sec.ipynb  get_vod_url.ipynb  make_template.ipynb  timesformer_01_minumum_test.ipynb
scripts/: fix_round_labels_from_actions.py  label_rounds_from_ui_diff.py
src/valorant/: __init__.py  regions.py  utils.py  video.py
src/valorant/labels/: __init__.py  segments.py  sequence.py
src/valorant/ocr/: __init__.py  preprocess.py  round.py  score.py
